# telegram-bot-template

./: .env.dist  .pre-commit-config.yaml  LICENSE.md  Makefile  Procfile  README.md  app.json  docker-compose.yaml  getwebhook.py  main.py  pyproject.toml  requirements.txt  webhook.py
application/: __init__.py  commands.py  config.py  store.py
command/: __init__.py  commands.py  db.py
hackathon/: __init__.py
model/: __init__.py  chat.py
src/tgbot/application/: __init__.py  load_setting.py  save_setting.py
src/tgbot/infrastructure/api/: __init__.py  api.py
src/tgbot/infrastructure/bot/: __init__.py  bot.py
src/tgbot/infrastructure/cli/: AsyncTyper.py  __init__.py  cli.py
src/tgbot/infrastructure/config/: __init__.py  settings.py
src/tgbot/infrastructure/orm/: Settings.py  __init__.py  orm.py
